--- a/Springboot/docker-compose.yml
+++ b/Springboot/docker-compose.yml
@@ -1,15 +1,16 @@
+
 version: '3.8'
 
 services:
   mysql:
     image: mysql:8
-    container_name: convive_mysql
+    container_name: convive-mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: convivedb
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: apppass
+      MYSQL_DATABASE: convive_db
+      MYSQL_USER: convive
+      MYSQL_PASSWORD: convive123
     ports:
       - "3306:3306"
     volumes:
@@ -17,15 +18,12 @@ services:
 
   app:
     build: .
-    container_name: convive_app
+    container_name: convive-app
     depends_on:
       - mysql
     ports:
       - "8080:8080"
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/convivedb
-      SPRING_DATASOURCE_USERNAME: appuser
-      SPRING_DATASOURCE_PASSWORD: apppass
+    restart: always
 
 volumes:
   mysql_data:
