Enhance user management and authentication features
- Update Dockerfile to use a custom Odoo config file.
- Modify docker-compose to mount configuration and keys.
- Improve ConviveAdmin model to reactivate inactive admins.
- Extend ResUsers model with birth date and default active status.
- Update user registration and authentication to handle birth date.
- Implement logout functionality in AuthService.
- Enhance user views with additional fields and instructions.

--- a/odoo/docker-compose.yml
+++ b/odoo/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     volumes:
       - odoo-web-data:/var/lib/odoo
       - ./extra-addons:/mnt/extra-addons
+      - ./odoo.conf:/etc/odoo/odoo.conf
+      - ./keys:/etc/odoo/keys
     restart: always
 
 volumes:
