--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -5,3 +5,6 @@ USER root
 RUN pip3 install --no-cache-dir PyJWT==2.8.0
 
 USER odoo
+
+# Use custom config file
+CMD ["odoo", "-c", "/etc/odoo/odoo.conf"]
