feat: Add RSA key generation and update dependencies for convive-jwt module

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,7 @@ secrets.json
 local_settings.py
 
 # Keys / certs
-*.pem
-*.key
+# *.pem y *.key se incluyen en el repo (generadas por convive-jwt)
 *.crt
 *.pfx
 *.p12
